--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "scipy>=1.10", # Scientific computing library
     "matplotlib",
     "statsmodels",
+    "mpi4py",
 ]
 
 [tool.setuptools]
